--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "html-obj",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A convertor between js object and  HTML. HTML.querySelector() is supported.",
   "keywords": [
     "html",
@@ -17,10 +17,8 @@
     "html-js"
   ],
   "main": "index.min.js",
+  "browser": "index.min.js",
   "license": "MIT",
-  "bugs": {
-    "email": "manuel@hauss.ee"
-  },
   "author": "Manuel Lõhmus <manuel@hauss.ee>",
   "files": [
     "index.js",
@@ -29,12 +27,14 @@
     "README.md",
     "LICENSE"
   ],
+  "homepage": "https://github.com/manuel-lohmus/html-obj#readme",
+  "bugs": "https://github.com/manuel-lohmus/html-obj/issues",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/manuel-lohmus/html-obj.git"
   },
-  "homepage": "https://github.com/manuel-lohmus/html-obj#readme",
   "dependencies": {
-    "xml-obj": "^1.0.0"
+    "log-report": "^1.1.3",
+    "xml-obj": "^1.0.2"
   }
 }
